# nexsearch

modules/: Cargo.toml
modules/nexsearch-cli/: Cargo.toml
